@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.audio.profiles"
     name="Audio Profiles"
-    version="1.2.5"
+    version="1.2.6"
     provider-name="Regss">
     <requires>
         <import addon="xbmc.python" version="2.14.0" />
